# naos-ui

./: .editorconfig  .gitignore  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-please-config.json  tsconfig.base.json  tsconfig.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pages.yml  release-please.yml  release.yml
crates/iktia-core/: Cargo.toml
crates/iktia-core/src/: ast.rs  codegen.rs  error.rs  lib.rs  model.rs  parse.rs
crates/iktia-core/tests/: conformance.rs
crates/iktia-core/tests/fixtures/conformance/accepted/: composition-toggle-list.wc.tsx  reactive-counter.wc.tsx  styled-slots.wc.tsx
crates/iktia-core/tests/fixtures/conformance/dsd/: snapshot-shell.wc.tsx
crates/iktia-core/tests/fixtures/conformance/rejected/: computed-block-body.wc.tsx  conditional-jsx.wc.tsx  map-block-body.wc.tsx  removed-signal.wc.tsx  unkeyed-map.wc.tsx
crates/iktia-node/: Cargo.toml
crates/iktia-node/src/: lib.rs
crates/lean-wc-core/: Cargo.toml
crates/lean-wc-core/src/: codegen.rs  error.rs  lib.rs  model.rs  naming.rs  parse.rs
crates/lean-wc-node/: Cargo.toml  build.rs
crates/lean-wc-node/src/: lib.rs
crates/naos-core/: Cargo.toml
crates/naos-core/src/: ast.rs  codegen.rs  error.rs  lib.rs  model.rs  naming.rs  parse.rs
crates/naos-core/tests/: conformance.rs
crates/naos-core/tests/fixtures/conformance/accepted/: composition-toggle-list.wc.tsx  dependency-ast-edge-cases.expected.txt  dependency-ast-edge-cases.wc.tsx  typed-props.wc.tsx
crates/naos-core/tests/fixtures/conformance/rejected/: broken-syntax.wc.tsx  effect-block-callback.wc.tsx  factory-render.wc.tsx  fragment-child.wc.tsx  match-outside-switch.wc.tsx  no-template.wc.tsx  prop-type-mismatch.wc.tsx  rest-props.wc.tsx  show-boolean-fallback.wc.tsx  string-event-handler.wc.tsx  unknown-component-options.wc.tsx
crates/naos-node/src/: lib.rs
crates/naos-wasm/: Cargo.toml
crates/naos-wasm/src/: lib.rs
docs/: README.md  actions.md  api-reference.md  async-lifecycle-audit.md  authoring.md  base-ui-primitive-architecture-audit.md  cli.md  comparison-gea.md  comparison-lit.md  comparison-react.md  comparison-solid.md  comparison-stencil.md  comparisons-homepage.md  comparisons.md  compiler-diagnostics.md  compiler-limitations.md  conformance-fixtures.md  data.md  declarative-shadow-dom-plan.md  demos.md  generated-output-contract.md  initial.md  milestones-v2.md  milestones.md  mvp-verification.md  native-distribution.md  npm-publishing.md  product-readiness-roadmap.md  quickstart.md  react-19-adaptation.md  runtime-boundary.md  styling-and-dsd.md  troubleshooting.md  v0.1-milestone-plan.md
docs/adrs/: 0001-platform-native-web-components.md  0002-rust-owned-compiler-semantics.md  0003-typescript-authoring-boundary.md  0004-no-framework-runtime.md  0005-static-analyzability-over-js-generalism.md  0006-signals-and-effects-model.md  0007-remix-v3-web-composition-inspiration.md  0008-primitive-contracts-parts-slots-data-state.md  0009-oxc-ast-analysis-before-api-expansion.md  0011-v0-1-public-api-surface.md  0012-palamedes-style-native-distribution.md  0013-tiny-runtime-boundary.md  0014-minimal-cli-scope.md  0015-css-and-dsd-contract.md  0016-diagnostics-and-source-maps.md  0017-theme-package-and-token-boundary.md  0018-form-associated-custom-element-support.md  0019-canonical-public-release-inventory.md  0020-owned-compiler-ir-lowered-from-oxc-ast.md  0021-jsx-event-attribute-owns-listener-name.md  0022-package-stable-tag-names-and-registration.md  0023-oxlint-enforced-dependency-boundaries.md  0024-public-api-naming-and-lifecycle-ownership.md  0025-wasm-compiler-build.md  README.md
docs/rfcs/: 0001-iktia-primitives-package.md  0001-naos-primitives-package.md  0002-zag-backed-primitives-roadmap.md  0003-iktia-theme-package.md  0004-component-instance-factory-semantics-review.md  0004-component-instance-factory-semantics.md  0005-native-context-request-primitives.md  0006-iktia-router-package.md  0007-overlay-portal-kernel.md  0008-presence-transition-lifecycle.md  0009-shared-runtime-kernel.md  README.md
docs/superpowers/specs/: 2026-07-11-compiler-ast-ir-design.md  2026-07-11-jsx-event-name-design.md  2026-07-11-release-set-design.md  2026-07-12-dependency-boundary-enforcement-design.md  2026-07-12-epic-123-delivery-design.md  2026-07-12-package-stable-tag-names-design.md
examples/counter/: dsd.html  index.html  package.json  playwright.config.ts  vite.config.ts
examples/counter/scripts/: build-dsd-html.mjs
examples/counter/src/: counter.wc.css  counter.wc.tsx  demo.css  disclosure.wc.css  disclosure.wc.tsx  effect-lifecycle-item.wc.tsx  effect-lifecycle-list.wc.tsx  field.wc.css  field.wc.tsx  list-reconciler-probe.wc.tsx  main.ts  note-actions.ts  note-form.wc.tsx  reactivity-probe.wc.tsx  style-probe.wc.tsx  toggle.wc.css  toggle.wc.tsx  toolbar.wc.css  toolbar.wc.tsx
examples/counter/tests/: counter.spec.ts
examples/tasks/: index.html  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
examples/tasks/src/: activity-feed.wc.css  activity-feed.wc.tsx  api.ts  app.css  board.wc.css  board.wc.tsx  main.ts  motion-helpers.ts  resources.ts  status-badge.harness.test.ts  status-badge.wc.css  status-badge.wc.tsx  task-detail.wc.css  (+3 more)
scripts/: api-conventions.mjs  api-conventions.test.mjs  build-playground-assets.mjs  build-wasm-binding.mjs  check-api-conventions.mjs  check-dependency-boundaries.mjs  check-release-set.mjs  copy-native-binding.mjs  dependency-boundaries.test.mjs  dependency-layers.mjs  fetch-native-binding.mjs  release-set.mjs  release-set.test.mjs  verify-fresh-project.mjs
sites/docs/: package.json  react-router.config.ts  tsconfig.json  vite.config.ts
sites/playground/: index.html  package.json  tsconfig.json  vite.config.ts
(+40 files in other folders)
