[workspace]
members = ["crates/lean-wc-core", "crates/lean-wc-node"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/sebastian-software/lean-wc"
rust-version = "1.93"
version = "0.0.0"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
needless_borrow = "warn"
question_mark = "warn"
redundant_clone = "warn"
todo = "deny"
unwrap_used = "deny"
