[workspace]
members = ["crates/naos-core", "crates/naos-node", "crates/naos-wasm"]
resolver = "2"

# Distribution profile for the WASM playground/fallback artifact (ADR 0025):
# fat LTO and a single codegen unit for size, stripped symbols. Kept separate
# from `release` so native binding builds stay fast.
[profile.wasm-release]
codegen-units = 1
inherits = "release"
lto = true
strip = true

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/sebastian-software/naos-ui"
rust-version = "1.93"
version = "0.0.0"

[workspace.lints.rust]
future_incompatible = { level = "warn", priority = -1 }
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "deny"
unused_must_use = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
needless_borrow = "warn"
question_mark = "warn"
redundant_clone = "warn"
todo = "deny"
unwrap_used = "deny"
