[package]
name = "lean-wc-node"
description = "Node.js bindings for the lean-wc Rust compiler core."
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
lean-wc-core = { path = "../lean-wc-core" }
napi = { version = "3.9.0", default-features = false, features = ["napi9"] }
napi-derive = "3.5.6"

[build-dependencies]
napi-build = "2.3.2"

[lints]
workspace = true

